Fix - Button alignment issue caused by WP 5.8

--- a/style.css
+++ b/style.css
@@ -472,10 +472,6 @@ textarea {
 	width: 100%;
 }
 
-button[type="submit"] {
-	margin-bottom: 50px;
-}
-
 /*--------------------------------------------------------------
 Links
 --------------------------------------------------------------*/
